--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                        Web Design 
                     </h2>
                     <p>
-                       
+                       Ny web design include business and education tasks.
+                        on business side I focus on hotel management.
                     </p>
                     <a href="#">Learn more</a>
                 </div>
