--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <a href="https://www.linkedin.com/in/bojaa-m-92a285239/"target="_blank"><span><i class="fa-brands fa-linkedin"></i></span></a>
                     <a href="https://www.instagram.com/ademab149" target="_blank"><span><i class="fa-brands fa-instagram"></i></span></a>
                     <a href="https://t.me/admamhmd" target="_blank"><i class="fa-brands fa-telegram"></i></a>
-                    <a href="https://github.com/bojaam"><span><i class="fa-brands fa-github"></i></span></a>
+                    <a href="https://github.com/ademahmed23"><span><i class="fa-brands fa-github"></i></span></a>
 
                     </div>
                     <a href="AAU.docx" download class="btn btn2">Download File</a>
