--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                     <p><i class="fa-solid fa-square-phone"></i>+251968292069</p>
                     <div class="social-icons">
                     <a href="https://www.facebook.com/adem.ab.395" target="_blank"> <span><i class="fa-brands fa-facebook"></i></span></a>
-                    <a href="https://twitter.com/@AdemAhmed23" target="_blank"><span><i class="fa-brands fa-twitter"></i></span</a>
-                    <a href="https://www.linkedin.com/in/bojaa-m-92a285239/"target="_blank"><span><i class="fa-brands fa-linkedin"></i></span></a>
+                    <a href="https://twitter.com/AdemAhmed23" target="_blank"><span><i class="fa-brands fa-twitter"></i></span</a>
+                    <a href="https://www.linkedin.com/in/adem-ahmed-92a285239/"target="_blank"><span><i class="fa-brands fa-linkedin"></i></span></a>
                     <a href="https://www.instagram.com/ademab149" target="_blank"><span><i class="fa-brands fa-instagram"></i></span></a>
                     <a href="https://t.me/admamhmd" target="_blank"><i class="fa-brands fa-telegram"></i></a>
                     <a href="https://github.com/ademahmed23"><span><i class="fa-brands fa-github"></i></span></a>
